// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<button
  className=""
  type="button"
/>
`;

exports[`Button renders correctly 2`] = `
<button
  className=""
  type="submit"
/>
`;

exports[`Button renders correctly 3`] = `
<button
  className="test1"
  type="button"
/>
`;

exports[`Button renders correctly 4`] = `
<button
  className="test2"
  type="submit"
/>
`;

exports[`Button renders primary correctly 1`] = `
<button
  className="primary"
  type="button"
/>
`;

exports[`Button renders primary correctly 2`] = `
<button
  className="primary"
  type="submit"
/>
`;

exports[`Button renders primary correctly 3`] = `
<button
  className="primary test1"
  type="button"
/>
`;

exports[`Button renders primary correctly 4`] = `
<button
  className="primary test2"
  type="submit"
/>
`;

exports[`Button renders secondary correctly 1`] = `
<button
  className="secondary"
  type="button"
/>
`;

exports[`Button renders secondary correctly 2`] = `
<button
  className="secondary"
  type="submit"
/>
`;

exports[`Button renders secondary correctly 3`] = `
<button
  className="secondary test1"
  type="button"
/>
`;

exports[`Button renders secondary correctly 4`] = `
<button
  className="secondary test2"
  type="submit"
/>
`;
